--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^1.6.3",
+    "googleapis": "^95.0.0",
     "jwt-decode": "^4.0.0",
     "primereact": "^10.3.3",
     "react": "^18.2.0",
