--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "googleapis": "^95.0.0",
     "jwt-decode": "^4.0.0",
     "primereact": "^10.3.3",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18.2.0",
@@ -22,6 +23,8 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "string-encode-decode": "^1.0.7",
+    "urlencode": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
